logs/question_3_errors.txt
[2025-07-21 06:56:47] Error Type: WrongOutput
Failed Test Case: {'input': 'hello', 'output': 'olleh'}
Error Message: Expected: olleh, Got: hello
User Code:

def func(word):
    return word[::1]

------------------------------------------------------------

[2025-07-21 06:57:04] Error Type: SyntaxError
Error Message: '[' was never closed (<string>, line 3)
Traceback:
Traceback (most recent call last):
  File "/app/my_app/routes/admin.py", line 150, in evaluate_and_record_stats
    exec(user_code, exec_env)
  File "<string>", line 3
    return word[::1
               ^
SyntaxError: '[' was never closed
User Code:

def func(word):
    return word[::1]

------------------------------------------------------------

